#19 - making nested interfaces top-level.